m/k/k3d-dfd-cluster-kourier/resource-ingress-default-wildcard.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-wildcard
  namespace: kourier-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: '*.default.dev.amanibhavam.defn.run'
spec:
  ingressClassName: traefik
  rules:
    - host: wildcard.default.dev.amanibhavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kourier-internal
                port:
                  number: 80
